Add basic support for 7.4 API version - Adds new constants for 7.4 API - Moves controller logic introduced by 7.3 API controllers to new common controllers - Adds new controllers for 7.4 API endpoint mappings - Adjusts converter API version mappings to include 7.4 API - Adds new unit and integration test cases covering the 7.4 API - Adds new end-to-end test cases covering the 7.4 API - Introduces random URI usage in integration tests to isolate test cases better - Removes 7.2 API variants of unnecessary end-to-end tests - Changes Lowkey Vault Client implementation to automatically use 7.4 API - Updates readme to mention the 7.4 API support
#697
{minor}

Signed-off-by: Esta Nagy <nagyesta@gmail.com>